examples/slack/ingress-snowball/expected/staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snowball-webclient-service
  name: staging-snowball-webclient-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: snowball-webclient
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: snowball-webclient
  name: staging-snowball-webclient
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: snowball-webclient
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: snowball-webclient
    spec:
      containers:
      - image: gcr.io/myapp/snowball-webclient:3.0.0
        imagePullPolicy: IfNotPresent
        name: snowball-webclient
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: apps/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: staging-snowball-webclient-ip
    networking.gke.io/managed-certificates: staging-snowball-webclient-certificate
  labels:
    app: snowball-webclient
  name: staging-snowball-webclient-ingress
spec:
  backend:
    serviceName: staging-snowball-webclient-service
    servicePort: 80
---
apiVersion: networking.gke.io/v1beta1
kind: ManagedCertificate
metadata:
  name: staging-snowball-webclient-certificate
spec:
  domains:
  - abc.prolificparc.com
---
kind: GKEGlobalStaticIP
metadata:
  name: staging-snowball-webclient-ip
